# pyfda

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
align/: index.html
align/elastic-alignment/: index.html
align/shape-analysis/: index.html
analyze/: index.html
analyze/clustering/: index.html
analyze/covariance-functions/: index.html
analyze/equivalence-testing/: index.html
analyze/outlier-detection/: index.html
analyze/seasonal-analysis/: index.html
analyze/tolerance-bands/: index.html
docs/: index.md
docs/align/: elastic-alignment.md  index.md  shape-analysis.md
docs/analyze/: clustering.md  covariance-functions.md  equivalence-testing.md  index.md  outlier-detection.md  seasonal-analysis.md  tolerance-bands.md
docs/learn/: derivatives.md  index.md  introduction.md  simulation.md  smoothing.md
docs/monitoring/: index.md  spm.md
docs/reference/: alignment.md  basis.md  classification.md  clustering.md  conformal.md  depth.md  explain.md  fdata.md  index.md  metric.md  outliers.md  regression.md  seasonal.md  simulation.md  smoothing.md  spm.md  tolerance.md
learn/: index.html
monitoring/: index.html
reference/: index.html
regression/: index.html
represent/: index.html
search/: search_index.json
src/: alignment_mod.rs  basis_mod.rs  classification_mod.rs  clustering_mod.rs  conformal_mod.rs  convert.rs  depth_mod.rs  explain_mod.rs  fdata_mod.rs  lib.rs  metric_mod.rs  outliers_mod.rs  regression_mod.rs  seasonal_mod.rs  simulation_mod.rs  smoothing_mod.rs  spm_mod.rs  tolerance_mod.rs
tests/: test_basic.py  test_fdata_class.py
(+50 files in other folders)
