[package]
name = "fdars"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"
description = "Python bindings for fdars-core – Functional Data Analysis in Rust"
authors = ["Simon Mueller"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
fdars-core = { version = "0.13.0", features = ["parallel"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
